# LTPTextDetector

./: .README.txt.swp  CMakeLists.txt  README.txt  config_11.yml  detector
scripts/: config.sh  cv_adj.py  do_real_svm.py  extract_hog.sh  fit_sgd_cv.py  gridsearch.py  make_datasets.py  make_pw_labelled_dataset.py  prepare_crf.py  train_adaboost.sh  train_all.sh  train_cc.sh  train_svm.sh
scripts/analyze/: show.py  show_gray.py
scripts/pw_analyze/: analyze.py  cv_dists.py  dump_data.py  mk_pw.py  plot_stddev_heights.py  svmdelme.py
src/: AdaboostClassifier.cpp  BinaryMaskExtractor.cpp  CCGroup.cpp  CCUtils.cpp  CNN.cpp  CNNConnectedComponentClassifier.cpp  CRFLinConnectedComponentFilterer.cpp  CRFRFConnectedComponentFilterer.cpp  CacheManager.cpp  ConfigurationManager.cpp  ConnectedComponentClassifier.cpp  ConnectedComponentExtractor.cpp  ConnectedComponentGrouper.cpp  Detector.cpp  HardPPWordSplitter.cpp  HierarchicalMSER.cpp  HogIntegralImageComputer.cpp  LTPComputer.cpp  LabelWidget.cpp  LibSVMClassifier.cpp  ModelManager.cpp  MserDetector.cpp  MserExtractor.cpp  MserExtractorFast.cpp  MserTree.cpp  ProjectionProfileComputer.cpp  RFConnectedComponentClassifier.cpp  RFConnectedComponentFilterer.cpp  RectShrinker.cpp  SVMConnectedComponentClassifier.cpp  SVMRFConnectedComponentClassifier.cpp  SimpleWordSplitter.cpp  SoftPPWordSplitter.cpp  UnionFind.cpp  check_svm.cpp  classify.cpp  cnpy.cpp  create_boxes.cpp  cv_forest.cpp  cv_predict_forest.cpp  (+16 more)
text_detector/: AdaboostClassifier.h  BinaryMaskExtractor.h  CCGroup.h  CCUtils.h  CNN.h  CNNConnectedComponentClassifier.h  CRFLinConnectedComponentFilterer.h  CRFRFConnectedComponentFilterer.h  CacheManager.h  ConfigurationManager.h  ConnectedComponentClassifier.h  ConnectedComponentExtractor.h  ConnectedComponentFilterer.h  ConnectedComponentGrouper.h  Detector.h  HardPPWordSplitter.h  HierarchicalMSER.h  HogIntegralImageComputer.h  ImagePyramid.h  LTPComputer.h  LabelWidget.h  LibSVMClassifier.h  ModelManager.h  MserDetector.h  MserExtractor.h  MserExtractorFast.h  MserTree.h  ProjectionProfileComputer.h  RFConnectedComponentClassifier.h  RFConnectedComponentFilterer.h  RectShrinker.h  SVMConnectedComponentClassifier.h  SVMRFConnectedComponentClassifier.h  SimpleWordSplitter.h  SoftPPWordSplitter.h  UnionFind.h  WordSplitter.h  config.h  moc_LabelWidget.cxx_parameters  mser.h  (+1 more)
